# vex-lamps

./: .env.example  .gitignore  LICENSE  README.md  agent.py  agent_trace.py  broll_intelligence.py  config.py  engine.py  how-it-works.md  instructions.md  main.py  prompts.py  pyproject.toml  repl.py  requirements.txt  state.py  ui.py  visual_intelligence.py  web_app.py
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci.yml
presets/: export_presets.json
providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py
renderers/: __init__.py  base.py  blender_renderer.py  ffmpeg_renderer.py  manim_quality.py  manim_renderer.py
tests/: test_config_and_visual_ir.py  test_engine_ffmpeg.py  test_state.py  test_web_app.py
tools/: __init__.py  audio.py  auto_shorts.py  auto_visuals.py  cut.py  export.py  info.py  merge.py  overlay.py  pexels_broll.py  silence.py  speed.py  subtitles.py  summarize.py  transcript.py  transcript_utils.py  transitions.py  trim.py  undo.py
vex_manim/: __init__.py  blueprint.py  briefs.py  director.py  layout_qa.py  premium_fallback.py  qa.py  runtime.py  scene_library.py  skill_pack.py  validator.py  visual_ir.py
web_static/: __init__.py  index.html
