[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=0.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "ffmpeg-python>=0.2.0",
  "moviepy==1.0.3",
  "manim>=0.20.0",
  "imageio>=2.9.0",
  "imageio-ffmpeg>=0.4.7",
  "python-dotenv>=1.0.0",
  "openai-whisper>=20231117",
  "numpy>=1.24.0",
  "yt-dlp>=2025.1.0",
]

[project.scripts]
vex = "main:app"

[tool.setuptools]
include-package-data = true
py-modules = ["main", "agent", "agent_trace", "broll_intelligence", "config", "engine", "prompts", "sources", "state", "visual_intelligence"]
packages = ["presets", "providers", "renderers", "tools"]

[tool.setuptools.package-data]
presets = ["*.json"]
