[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex"
version = "1.0.0"
description = "Terminal-first AI video editor with transcript-aware auto visuals, stock b-roll, and conversational editing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["video-editing", "ffmpeg", "manim", "ai-agent", "whisper", "automation"]
authors = [
  { name = "AKMessi" }
]
dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=0.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "ffmpeg-python>=0.2.0",
  "moviepy==1.0.3",
  "manim>=0.20.0",
  "imageio>=2.9.0",
  "imageio-ffmpeg>=0.4.7",
  "python-dotenv>=1.0.0",
  "openai-whisper>=20231117",
  "numpy>=1.24.0",
  "yt-dlp>=2025.1.0",
]

[project.urls]
Homepage = "https://github.com/AKMessi/vex"
Repository = "https://github.com/AKMessi/vex"
Issues = "https://github.com/AKMessi/vex/issues"

[project.scripts]
vex = "main:app"

[tool.setuptools]
include-package-data = true
py-modules = ["main", "agent", "agent_trace", "broll_intelligence", "config", "engine", "prompts", "sources", "state", "visual_intelligence"]
packages = ["presets", "providers", "renderers", "tools", "vex_manim"]

[tool.setuptools.package-data]
presets = ["*.json"]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".analysis",
  "build",
  "dist",
  "*.egg-info",
  "__pycache__",
  "vex_debug_*",
  "vex_render_check*",
]
