[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex"
version = "1.0.0"
description = "Local AI video editing workspace with a browser UI, CLI, transcript-aware visuals, stock b-roll, and conversational editing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["video-editing", "ffmpeg", "manim", "ai-agent", "gemini", "web-ui", "automation"]
authors = [
  { name = "AKMessi" }
]
dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=0.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "ffmpeg-python>=0.2.0",
  "moviepy==1.0.3",
  "imageio>=2.9.0",
  "imageio-ffmpeg>=0.4.7",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
manim = [
  "manim>=0.20.0",
]
transcription = [
  "openai-whisper>=20231117",
]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]
full = [
  "manim>=0.20.0",
  "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/AppleLamps/vex-lamps"
Repository = "https://github.com/AppleLamps/vex-lamps"
Issues = "https://github.com/AppleLamps/vex-lamps/issues"

[project.scripts]
vex = "main:app"

[tool.setuptools]
include-package-data = true
py-modules = ["main", "agent", "agent_trace", "broll_intelligence", "config", "engine", "prompts", "repl", "sources", "state", "ui", "visual_intelligence", "web_app"]
packages = ["presets", "providers", "renderers", "tools", "vex_manim", "web_static"]

[tool.setuptools.package-data]
presets = ["*.json"]
web_static = ["*.html"]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".analysis",
  "build",
  "dist",
  "*.egg-info",
  "__pycache__",
  "vex_debug_*",
  "vex_render_check*",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "F", "I", "UP017", "UP032", "UP034", "UP035", "UP037"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = [
  "config.py",
  "state.py",
  "renderers/base.py",
  "renderers/manim_quality.py",
]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
